--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,19 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btn1{
+  width: 100%;
+  height: fit-content;
+  padding: 10px;
+  background-color: #013f56;
+  color: white;
+  text-align: center;
+  border: none;
+  border-radius: 5px;
+}
+
+.fields {
+  min-height: '65px !important';
+  padding-top: '5px !important'
+}
